--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>김태근 | 웹 포트폴리오</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
